# TraceRelay

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
docs/: ACCEPTANCE_CRITERIA_RC3.md  ARCHITECTURE.md  FILE_LEVEL_IMPLEMENTATION_MATRIX.md  LIVE_TEST_CASES_RC3.md  PUBLIC_OVERVIEW.md  RC3_IMPLEMENTATION_TASKS.md  rc3_tasks.json
docs/diagrams/: tracerelay-architecture-overview.mmd  tracerelay-mcp-integration-flow.mmd  tracerelay-memory-three-layers.mmd  tracerelay-self-evolving-loop.mmd
plugins/schemaledger/: .mcp.json  README.md
plugins/tracerelay/: .mcp.json  README.md
pydantic/: __init__.py
schemaledger/: __init__.py
scripts/: docker_start_mcp.sh  docker_start_web.sh  install_claude_code_mcp.sh  install_claude_code_plugin.sh  install_codex_plugin.sh
src/: sitecustomize.py  slg_cli.py  trr_cli.py
src/schemaledger/: candidate_generation.py  cli.py  config.py  coverage_dimensions.py  db.py  embeddings.py  extraction.py  family_bootstrap.py  family_resolution.py  llm.py  memory.py  models.py  prompt_interpretation.py  task_flow.py  (+5 more)
tests/: conftest.py  test_claude_code_support.py  test_cli_short_name.py  test_codex_plugin.py  test_docker_stack.py  test_external_surfaces.py  test_memory.py  test_memory_storage.py  test_prompt_interpretation.py  test_rc3_plan_smoke.py  test_task_runtime.py
tmp_repro_workspace/: artifacts.jsonl
tmp_retest_workspace/: artifacts.jsonl
tmp_retest_workspace_2/: artifacts.jsonl
workspace/: artifacts.jsonl
(+78 files in other folders)
